minor: fixes Type of URI in test class