@@ -1,6 +1,7 @@
 import org.junit.Test;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 
@@ -10,16 +11,16 @@ public class CodingChallengeTest {
 
     @Test
     public void buildServerUrl() throws MalformedURLException, URISyntaxException {
-        URL sampleUrl = new URL("http://localhost:8080/articles/50");
+        URI sampleUrl = URI.create("http://localhost:8080/articles/50");
 
         URL basePath = new URL("http://localhost:8080");
         String resource = "articles";
         Integer lines = 50;
 
-        assertEquals(sampleUrl,CodingChallenge.buildServerUrl(basePath,resource,lines));
+        assertEquals(sampleUrl, CodingChallenge.buildServerUrl(basePath, resource, lines));
 
         URL basePathWithTrailingSlash = new URL("http://localhost:8080/");
-        assertEquals(sampleUrl,CodingChallenge.buildServerUrl(basePathWithTrailingSlash,resource,lines));
+        assertEquals(sampleUrl, CodingChallenge.buildServerUrl(basePathWithTrailingSlash, resource, lines));
 
     }
 }
